--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 finaldiagnostics.pdf
 \350\257\212\346\226\255\345\255\246.pdf
+"\350\257\212\346\226\255\345\255\246.pdf"
+诊断学.pdf
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
